Fix margin and padding of peers tab to left align email button with checkboxes

--- a/ent-talent-mgmt/src/main/webapp/assets/styles/peers.css
+++ b/ent-talent-mgmt/src/main/webapp/assets/styles/peers.css
@@ -1,8 +1,7 @@
-#email-peers-icon, #delete-peers-icon {
-  margin-top: 15px;
-  color: grey;
+.peer-name {
+  margin-right: 15px;
 }
 
-md-list-item h4.peer-name {
-  margin-right: 15px;
+.email-peers {
+  margin-left: 19px;
 }
